test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/no-semicolon-callback.widl
callback interface NoSemicolon {
  attribute boolean noSemiColon;
}

enum YouNeedOne {
  "really"
}
